--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -43,5 +43,11 @@ span {
 }
 
 .result {
-  display: none;
+  display: flex;
+  justify-content: center;
+  width: 300px;
+  height: 30px;
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
 }
